--- a/dj/main/templates/processes.html
+++ b/dj/main/templates/processes.html
@@ -8,11 +8,11 @@
 
 {% block content %}
 
-<a href="{% url client client.slug %}">{{ client.name }}</a>
-<a href="{% url episode_list client.slug show.slug%}">{{ show.name }}</a>
+<a href="{% url "client" client.slug %}">{{ client.name }}</a>
+<a href="{% url "episode_list" client.slug show.slug%}">{{ show.name }}</a>
 </p>
 
-    <a href="{% url admin:main_episode_changelist %}?show__id__exact={{show.id}}&locked__isnull=False">locked episodes admin</a>
+    <a href="{% url "admin:main_episode_changelist" %}?show__id__exact={{show.id}}&locked__isnull=False">locked episodes admin</a>
 
   <table>
     <thead>
@@ -40,7 +40,7 @@
         <td>{{episode.locked_by}}</td>
         <td>{{episode.stop|yesno:"y,n,"}}</td>
         <td style="white-space:normal"><a href="E/{{episode.id}}/">{{ episode.name }}</a></td>
-        <td><a href={% url episode_logs episode.id %}>logs</a></td>
+        <td><a href={% url "episode_logs" episode.id %}>logs</a></td>
       </tr>
     {% endfor %}
   </table>
