--- a/dj/main/templates/approve/base.html
+++ b/dj/main/templates/approve/base.html
@@ -26,7 +26,7 @@
 
 {% if user.is_authenticated %}
 <hr>
-<a href="{% url admin:main_episode_change episode.id %}">admin</a> <br>
+<a href="{% url "admin:main_episode_change" episode.id %}">admin</a> <br>
 <a href="E/{{episode.id}}/">{{ episode.name }}</a> <br>
 {% endif %}
 
