--- a/dj/main/templates/approve/train.html
+++ b/dj/main/templates/approve/train.html
@@ -24,7 +24,7 @@ There are three phases to producing videos:
 For a large event, we will find additional people to help with #3.  What comes next is the page they will land on.  It is hard to tailor these instructions to fit everyone's role, so it is a little redundant which makes it seem like you are not on the right page.  
 </p>
 <p>
-There are only 3 pages, and you are done with the first, so without further adieu, <strong>click to the <a href="{% url approve_episode episode.id episode.slug episode.edit_key %}">Volunteer page</a>.</strong>
+There are only 3 pages, and you are done with the first, so without further adieu, <strong>click to the <a href="{% url "approve_episode" episode.id episode.slug episode.edit_key %}">Volunteer page</a>.</strong>
 </p>
 <p>
 You should probably read this too: <a href="http://dvswitch.alioth.debian.org/wiki/event_volunteer/"> DVswitch/ event volunteer</a>.
