--- a/dj/main/templates/clients.html
+++ b/dj/main/templates/clients.html
@@ -1,4 +1,4 @@
-{# client_list.html #}
+{# clients.html #}
 {% extends "base.html" %}
 
 {% block content %}
@@ -7,8 +7,8 @@
         {% for client in clients %}
             <tr class="row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}"> 
                 <td>{{client.max_date|date:"Y-M-d"}}</td>   
-                <td><a href="{% url admin:main_client_change client.id%}">{{client.id}}</a> </td>   
-                <td><a href="{% url client client.slug %}">{{ client.name }}</a></td>
+                <td><a href="{% url "admin:main_client_change" client.id%}">{{client.id}}</a> </td>   
+                <td><a href="{% url "client" client.slug %}">{{ client.name }}</a></td>
             </tr>
         {% endfor %}
     </table>
