--- a/dj/volunteers/templates/episode_review.html
+++ b/dj/volunteers/templates/episode_review.html
@@ -10,7 +10,7 @@
   <tbody>
     <tr><th>Name</th><td><strong>{{ episode.name }}</strong></td></tr>
     <tr><th>Presenter(s)</th><td>{{ episode.authors }}</td></tr>
-    <tr><th>Location</th><td>{% if user.is_staff %}<a href="{% url rf_set episode.location.slug %}?start_date={{episode.start|date:"Y-m-d"}}">{% endif %}{{ episode.location }}{% if user.is_staff %}</a>{% endif %}</td></tr>
+    <tr><th>Location</th><td>{% if user.is_staff %}<a href="{% url "rf_set" episode.location.slug %}?start_date={{episode.start|date:"Y-m-d"}}">{% endif %}{{ episode.location }}{% if user.is_staff %}</a>{% endif %}</td></tr>
     <tr><th>Time</th><td>{{ episode.start|date:"D, d M, Y" }} {{ episode.start|date:"H:i"}}-{% if not same_dates %}{{ episode.end|date:"D, d M, Y" }} {% endif %}{{ episode.end|date:"H:i" }}</td></tr>
   </tbody>
   </table>
@@ -48,7 +48,7 @@
   <p>This episode has been marked "borked" (i.e., it is messed up beyond
      recovery) and does not need further processing.
   </p>
-  <form action="{% if edit_key %}{% url guest_reopen episode.id edit_key %}{% else %}{% url volunteer_reopen episode.id %}{% endif %}" method="post">
+  <form action="{% if edit_key %}{% url "guest_reopen" episode.id edit_key %}{% else %}{% url "volunteer_reopen" episode.id %}{% endif %}" method="post">
       {% csrf_token %}
       <input type="submit" value="Unbork" />
   </form>
@@ -92,7 +92,7 @@ set the Action to "Encode" and hit "Submit" at the bottom of this page.
 {% else %}
   <p>This episode has already been reviewed. Thank you for volunteering!</p>
   {% if episode.state == 2 and not episode.locked %}
-    <form action="{% if edit_key %}{% url guest_reopen episode.id edit_key %}{% else %}{% url volunteer_reopen episode.id %}{% endif %}" method="post">
+    <form action="{% if edit_key %}{% url "guest_reopen" episode.id edit_key %}{% else %}{% url "volunteer_reopen" episode.id %}{% endif %}" method="post">
       {% csrf_token %}
       <input type="submit" value="Edit" />
     </form>
