--- a/dj/main/templates/show_anomalies.html
+++ b/dj/main/templates/show_anomalies.html
@@ -17,7 +17,10 @@
 </tr>
 
 <tr>
-<td><a href="{{show.schedule_url}}">{{show.schedule_url}}</a></td>
+<td>
+    <a href="{{show.schedule_url}}">{{show.schedule_url}}</a>
+    <a href="{{show.conf_url}}">{{show.conf_url}}</a>
+</td>
 <td>
     <a href="{% url "eps_xfer" client.slug show.slug %}">{{show.slug}}.json</a> </br>
     <a href="{% url "eps_csv" client.slug show.slug %}">{{show.slug}}.csv</a>
