add link to cutlist admin.

--- a/dj/main/templates/show_anomalies.html
+++ b/dj/main/templates/show_anomalies.html
@@ -26,7 +26,10 @@
     <a href="{% url "eps_csv" client.slug show.slug %}">{{show.slug}}.csv</a>
 </td>
 <td><a href="{% url "final_file_audio" %}?show_id={{show.id}}">final_file_audio</a></td>
-<td><a href="{% url "mini_conf" %}?show_id={{show.id}}">mini_conf</a></td>
+<td>
+    <a href="{% url "mini_conf" %}?show_id={{show.id}}">mini_conf</a>
+    <a href="{% url "admin:main_cut_list_changelist" %}?episode__show__id__exact={{show.id}}">Show cut list</a>
+</td>
 </tr>
 
 <tr>
