--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -143,7 +143,7 @@ Admin: <a href="{% url "admin:main_episode_change" episode.id%}">episode</a>
  <div class="viewer" style="height: 200px; width: 800px;" >
 {% for img in episode.image_file_set.all %}
 {% if episode.show.slug == "pyohio_2015" %}
-    <img alt="recording sheet" src="http://64966d3674e0a64d8f4a-47c94b14ef8e1f83d5390cdb0629c6ed.r53.cf2.rackcdn.com/veyepar/{{client.slug}}/{{show.slug}}/img/{{img.filename}}" width=200 height=400 >
+    <img alt="recording sheet" src="http://64966d3674e0a64d8f4a-47c94b14ef8e1f83d5390cdb0629c6ed.r53.cf2.rackcdn.com/veyepar/{{client.slug}}/{{show.slug}}/img/{{img.filename}}" height=160 >
   {% else %}
     <img alt="recording sheet" src="{{MEDIA_URL}}{{client.slug}}/{{show.slug}}/img/{{img.filename}}" width=300 height=400 >
 {% endif %}
